fix: align my-account menu item with the submit-listing button

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -302,6 +302,11 @@ body.is-loading {
   width: 100px;
 }
 
+.header .navbar-nav {
+  display: flex;
+  align-items: center;
+}
+
 .header .navbar-nav .nav-item .dropdown-menu {
   top: 78px;
 }
